# gtmux

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTEXT.md  QUICKSTART.ko.md  QUICKSTART.md  README.ko.md  README.md  USAGE.ko.md  USAGE.md
.claude/: settings.json
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml  README.ko.md  README.md  rust-toolchain.toml
backend/.cargo/: config.toml
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: lib.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: lib.rs
backend/crates/http-api/: Cargo.toml
backend/crates/http-api/src/: attach_index.rs  auth.rs  file_stat.rs  fs_list.rs  lib.rs  schema.rs  session_lock.rs  session_pane_set.rs  sessions.rs  settings.rs  shutdown.rs  storage.rs  terminal_map.rs  terminals.rs  workspace.rs
backend/crates/http-api/src/file_open/: allowlist.rs  audit.rs  handlers.rs  mod.rs  spawn.rs
backend/crates/lifecycle/: Cargo.toml
backend/crates/lifecycle/src/: lib.rs
backend/crates/mux-router/: Cargo.toml
backend/crates/mux-router/src/: lib.rs
backend/crates/pty-backend/src/: lib.rs
backend/crates/pty-backend/tests/: integration_pane.rs
backend/crates/ws-server/: Cargo.toml
backend/crates/ws-server/src/: cmd_router.rs  hub.rs  lib.rs  payload.rs  ring.rs  varint.rs
codebase/: Makefile  QUICKSTART.ko.md  config.cloud.sample.toml  config.local.sample.toml  config.sample.toml
codebase/backend/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
codebase/backend/crates/auth/: Cargo.toml
codebase/backend/crates/config/: Cargo.toml
codebase/backend/crates/config/src/: lib.rs
codebase/backend/crates/http-api/: Cargo.toml
codebase/backend/crates/pty-backend/: Cargo.toml
codebase/backend/crates/pty-backend/src/: lib.rs
codebase/frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
codebase/frontend/src/lib/: uuid.ts
codebase/frontend/src/routes/: +layout.ts  +page.svelte
codebase/frontend/src/styles/: tokens.css
codebase/shared/: openapi.yaml
codebase/shared/contract/: README.md  canvas-layout-contract.sample.json
docs/: demo-guide.md  deploy.md  sketch.md
docs/adr/: 0001-tmux-integration-control-mode.md  0002-transport-websocket.md  0003-security-defaults.md  0004-terminal-rendering.md  0005-canvas-library.md  0006-persistence-storage.md  0007-server-session-port-binding.md  0008-single-pane-window-and-group.md  0009-tmux-daemon-isolation.md  0010-group-data-model.md  0011-backend-stack-rust.md  0012-frontend-stack-svelte.md  0013-pty-direct-no-tmux.md  0014-process-supervisor.md  0015-pane-auto-mount.md  0016-design-tokens-and-iconography.md  0017-layout-grid-and-chrome.md  0018-canvas-item-data-model.md  0019-session-and-workspace-model.md  0020-auth-lifecycle.md  0021-terminal-pool-and-mirror.md  0023-file-path-open-security.md  0024-layer-tree-and-z-index-separation.md  0025-session-scoped-pane-output-filter.md  0026-server-identity-and-session-flag-retirement.md  0027-inspector-multi-select-and-alignment.md  0028-undo-redo-policy.md  0029-session-import-export.md  0030-canvas-item-clipboard.md  0031-figure-input-modifier-constraint.md  0032-multi-select-context-menu.md  0033-asset-storage-and-serving.md  0034-file-stat-endpoint.md  0035-file-system-picker.md  0036-canvas-component-connector.md  0037-document-html-viewer-interactive.md
docs/agents/: backend-handover-v2.md  backend-handover-v3.md  backend-handover.md  frontend-handover-v2.md  frontend-handover-v3.md  frontend-handover.md
docs/demo/: 0001-demo-prep.md  0002-demo-prep-stage3.md
docs/plans/: 0001-research-plan.md  0002-work-dispatch.md  0003-s7-lifecycle-ui-implementation.md  0004-ui-ux-system-design.md  0005-figma-layout-overhaul.md  0006-canvas-workspace-feature-roadmap.md  0007-multi-session-pivot.md  0008-session-attach-recovery-impl.md  0009-auth-page-fe-pivot.md  0010-ui-ux-batch-4-inspector-and-layer-actions.md  0011-component-design-batch-caption-document.md
docs/reports/: 0001-tmux-control-mode.md  0002-terminal-rendering.md  0003-infinite-canvas.md  0004-transport.md  0005-security-model.md  0006-layout-persistence.md  0007-backend-runtime.md  0008-frontend-stack.md  0009-adr-coherence-review.md  0010-grill-amendments.md  0011-coherence-review.md  0012-bootstrap-smoke.md  0013-bootstrap-coherence-review.md  0014-session-handoff.md  0015-progress-status.md  0016-session-handoff.md  0017-progress-status.md  0018-session-handoff.md  0019-progress-status.md  0020-debug-classification.md  0021-session-handoff.md  0022-logic-amendment-decisions.md  0023-pty-poc-verification-and-decision.md  0024-stage-a-closeout-handoff.md  0025-session-resume-handoff.md  0026-stage-b-carry-forward.md  0027-session-resume-handoff.md  0028-s7-persistence-minimal-closeout.md  0029-frontend-design-ref-analysis.md  0030-sprint-7-closeout-and-handoff.md  0031-stage-1-3-multi-session-be-progress.md  0032-stage-4-terminal-pool-and-pivot-be-progress.md  0033-fe-stage-1-to-5-partial-progress.md  0033-next-session-handover-stage-5-entry.md  0034-stage-5-ab-ws-envelope-be-progress.md  0035-be-fe-coordination-stage-5.md  0036-frontend-review-action-items.md  0036-stage-5-dp1-and-d10-alpha-be-progress.md  0037-backend-review-action-items.md  0038-stage-5-next-batch-queue.md  (+64 more)
docs/src/: prompt_research_handoff.md
docs/ssot/: canvas-layout-schema.md  security-defaults.md  state-machines.html  state-machines.md  wire-protocol.md
frontend/: .gitignore  README.ko.md  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/codegen/: README.md  run.sh
frontend/src/: main.ts
frontend/src/lib/banner/: ReconnectBanner.svelte
frontend/src/routes/: +page.svelte
frontend/src/styles/: global.css  tokens.css
ref/frontend-design/: SPEC.md  auth.html  components-v2.html  components-v3.html  components-v4.html  components-v5.html  components-v6.html  components-v7.html  components.html  index-v2.html  index.html
shared/: README.md  openapi.yaml
smoke/: 01_engine_connect.sh  02_stage5.sh
(+329 files in other folders)
