[package]
name = "gtmux-http-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
gtmux-mux-router = { path = "../mux-router" }
gtmux-auth = { path = "../auth" }
gtmux-config = { path = "../config" }
