[package]
name = "gtmux-lifecycle"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
gtmux-config = { path = "../config" }
gtmux-auth = { path = "../auth" }
