[package]
name = "gtmux-lifecycle"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
gtmux-config = { path = "../config" }
gtmux-auth = { path = "../auth" }
# libc는 좁은 범위 SIGTERM/SIGKILL 송신 + geteuid 호출에만 사용 (unsafe 블록 격리).
libc = "0.2"

[dev-dependencies]
tempfile = "3"
