[package]
name = "gtmux-ws-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
http = "1"
tower-http = { workspace = true }
gtmux-mux-router = { path = "../mux-router" }
gtmux-auth = { path = "../auth" }
gtmux-config = { path = "../config" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
http = "1"
