[package]
name = "gtmux-pty-backend"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# PTY direct backend — owns one PTY pair + one child process per Pane.
# Replaces the tmux control-mode + lifecycle/mux-router parser stack.
# 정본: docs/adr/0013-pty-direct-no-tmux.md (D1~D14)
#       docs/adr/0014-process-supervisor.md (D2/D6/D7/D8)

[dependencies]
portable-pty = "0.9"
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util"] }
serde_json = { workspace = true }
